# authix

./: .env  .env.example  .gitignore  Cargo.toml  README.md
src/: auth_handler.rs  cache.rs  common.rs  errors.rs  login.rs  main.rs  user.rs
src/enums/: mod.rs
src/provider/: email.rs  login.rs  mod.rs  password.rs  register.rs  sms.rs
src/utils/: database.rs  jwt.rs  mod.rs  redis.rs  regex.rs  uuid.rs
