[package]
name = "authix"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web 框架
axum = { version = "0.7"}
axum-extra = { version = "0.9", features = ["typed-header"] }
headers = "0.4"

# Tokio 运行时，启用 signal
tokio = { version = "1.47", features = ["full", "signal"] }

# JSON 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# JWT 认证
jsonwebtoken = "9.3.1"
argon2 = "0.5"

# 限流
once_cell = "1.19"

# 日志 & tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# 错误处理
anyhow = "1.0"
thiserror = "1"

# 配置
dotenvy = "0.15.7"
config = "0.15.16"

# prometheus
prometheus = "0.14.0"

# uuid
uuid = { version = "1.18.1", features = ["v4"] }

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-native-tls", "mysql", "chrono"] }

# 缓存
redis = { version = "0.24", features = ["tokio-comp"]}
deadpool-redis = "0.22.0"

# 时间日期
chrono = { version = "0.4", features = ["serde"]}